--- a/mlir-hs.cabal
+++ b/mlir-hs.cabal
@@ -59,11 +59,12 @@ library
     , MLIR.AST.Builder
     , MLIR.AST.Dialect.Affine
     , MLIR.AST.Dialect.Arith
+    , MLIR.AST.Dialect.ControlFlow
+    , MLIR.AST.Dialect.Func
     , MLIR.AST.Dialect.LLVM
     , MLIR.AST.Dialect.Linalg
     , MLIR.AST.Dialect.MemRef
     , MLIR.AST.Dialect.Shape
-    , MLIR.AST.Dialect.Std
     , MLIR.AST.Dialect.Tensor
     , MLIR.AST.Dialect.Vector
     , MLIR.AST.Dialect.X86Vector
@@ -77,11 +78,12 @@ library
     , MLIR.Native.Pass
   other-modules:
       MLIR.AST.Dialect.Generated.Arith
+    , MLIR.AST.Dialect.Generated.ControlFlow
+    , MLIR.AST.Dialect.Generated.Func
     , MLIR.AST.Dialect.Generated.LLVM
     , MLIR.AST.Dialect.Generated.Linalg
     , MLIR.AST.Dialect.Generated.LinalgStructured
     , MLIR.AST.Dialect.Generated.Shape
-    , MLIR.AST.Dialect.Generated.Std
     , MLIR.AST.Dialect.Generated.Tensor
     , MLIR.AST.Dialect.Generated.Vector
     , MLIR.AST.Dialect.Generated.X86Vector
@@ -95,210 +97,7 @@ library
     , bytestring
     , transformers
   extra-libraries:
-    MLIRCAPIConversion
-    MLIRCAPIRegistration
-    MLIRGPUToNVVMTransforms
-    MLIRGPUToROCDLTransforms
-    MLIRGPUToSPIRV
-    MLIRToLLVMIRTranslationRegistration
-    MLIRCAPISparseTensor
-    MLIRCAPILinalg
-    MLIRGPUToGPURuntimeTransforms
-    MLIRROCDLToLLVMIRTranslation
-    MLIRSCFToSPIRV
-    MLIRVectorToROCDL
-    MLIRSparseTensorTransforms
-    MLIRAffineTransforms
-    MLIRAsyncToLLVM
-    MLIRGPUToVulkanTransforms
-    MLIRLinalgToLLVM
-    MLIRLinalgTransforms
-    MLIROpenACCToLLVMIRTranslation
-    MLIROpenMPToLLVM
-    MLIRROCDLIR
-    MLIRSPIRVToLLVM
-    MLIRSPIRVTranslateRegistration
-    MLIRStandardToSPIRV
-    MLIRCAPIAsync
-    MLIRArithmeticToSPIRV
-    MLIRComplexToLLVM
-    MLIRLinalgToSPIRV
-    MLIRMathToLibm
-    MLIRMathToSPIRV
-    MLIRMemRefToSPIRV
-    MLIROpenACCToLLVM
-    MLIRSPIRVDeserialization
-    MLIRSPIRVSerialization
-    MLIRSPIRVTransforms
-    MLIRStandardToLLVM
-    MLIRVectorToLLVM
-    MLIRVectorToSPIRV
-    MLIRCEXECUTIONENGINE
-    MLIRAMXTransforms
-    MLIRArithmeticToLLVM
-    MLIRArmSVETransforms
-    MLIRAsyncTransforms
-    MLIRMathToLLVM
-    MLIRMemRefToLLVM
-    MLIRSCFToGPU
-    MLIRSPIRVBinaryUtils
-    MLIRSPIRVConversion
-    MLIRSPIRVModuleCombiner
-    MLIRSPIRVUtils
-    MLIRStandardOpsTransforms
-    MLIRX86VectorTransforms
-    MLIRExecutionEngine
-    LLVMOrcJIT
-    MLIRCAPIGPU
-    MLIRAffineToStandard
-    MLIRArithmeticTransforms
-    MLIRArmNeon2dToIntr
-    MLIRComplexToStandard
-    MLIRLLVMCommonConversion
-    MLIRLinalgToStandard
-    MLIRMathTransforms
-    MLIRMemRefTransforms
-    MLIROpenACCToSCF
-    MLIRReconcileUnrealizedCasts
-    MLIRSCFToOpenMP
-    MLIRSCFToStandard
-    MLIRSCFTransforms
-    MLIRSPIRV
-    MLIRShapeOpsTransforms
-    MLIRShapeToStandard
-    MLIRTensorTransforms
-    MLIRTosaToLinalg
-    MLIRTosaToSCF
-    MLIRTosaToStandard
-    MLIRVectorToGPU
-    MLIRVectorToSCF
-    MLIRCAPITransforms
-    LLVMPasses
-    LLVMX86CodeGen
-    MLIRGPUTransforms
-    MLIRTosaTransforms
-    MLIRTransforms
-    LLVMCoroutines
-    LLVMGlobalISel
-    MLIRAMXToLLVMIRTranslation
-    MLIRArmNeonToLLVMIRTranslation
-    MLIRArmSVEToLLVMIRTranslation
-    MLIRNVVMToLLVMIRTranslation
-    MLIROpenMPToLLVMIRTranslation
-    MLIRTosa
-    MLIRVector
-    MLIRX86VectorToLLVMIRTranslation
-    MLIRLLVMToLLVMIRTranslation
-    LLVMAsmPrinter
-    LLVMSelectionDAG
-    LLVMipo
-    MLIRAffineUtils
-    MLIRLinalgUtils
-    MLIRQuant
-    MLIRTargetLLVMIRExport
-    LLVMFrontendOpenMP
-    LLVMCodeGen
-    MLIRTransformUtils
-    MLIRLinalgAnalysis
-    MLIRSparseTensorUtils
-    LLVMScalarOpts
-    MLIRLoopAnalysis
-    MLIRCAPILLVM
-    MLIRAMX
-    MLIRArmSVE
-    MLIRGPUOps
-    MLIRLLVMIRTransforms
-    MLIRLinalg
-    MLIRNVVMIR
-    MLIROpenMP
-    MLIRTargetCpp
-    MLIRTargetLLVMIRImport
-    MLIRX86Vector
-    MLIRCAPISCF
-    LLVMLinker
-    LLVMExecutionEngine
-    LLVMAggressiveInstCombine
-    LLVMInstCombine
-    LLVMObjCARCOpts
-    LLVMVectorize
-    LLVMInstrumentation
-    MLIRAffine
-    MLIRLLVMIR
-    MLIRSCF
-    MLIRCAPIShape
-    MLIRRewrite
-    LLVMBitWriter
-    LLVMTarget
-    LLVMTransformUtils
-    MLIRMemRef
-    MLIRShape
-    MLIRCAPIStandard
-    MLIRCAPITensor
-    LLVMJITLink
-    LLVMRuntimeDyld
-    LLVMDebugInfoDWARF
-    LLVMAnalysis
-    MLIRComplex
-    MLIROpenACC
-    MLIRPDLToPDLInterp
-    MLIRSparseTensor
-    MLIRCAPIIR
-    MLIRTensor
-    LLVMObject
-    LLVMIRReader
-    MLIRPass
-    MLIRPDLInterp
-    MLIRStandard
-    LLVMBitReader
-    LLVMCFGuard
-    LLVMProfileData
-    LLVMX86Desc
-    LLVMAsmParser
-    MLIRAnalysis
-    MLIRTranslation
-    MLIRArithmetic
-    MLIRArmNeon
-    MLIRAsync
-    MLIRDLTI
-    MLIREmitC
-    MLIRMath
-    MLIRMemRefUtils
-    MLIRPDL
-    MLIRPresburger
-    MLIRTilingInterface
-    MLIRVectorInterfaces
-    MLIRCopyOpInterface
-    MLIRLoopLikeInterface
-    LLVMMCParser
-    LLVMMCDisassembler
-    LLVMX86Info
-    MLIRDataLayoutInterfaces
-    MLIRCastInterfaces
-    MLIRInferTypeOpInterface
-    MLIRCallInterfaces
-    MLIRControlFlowInterfaces
-    MLIRDialect
-    MLIRSideEffectInterfaces
-    MLIRViewLikeInterface
-    MLIRDialectUtils
-    LLVMCore
-    MLIRParser
-    LLVMTextAPI
-    LLVMOrcTargetProcess
-    LLVMRemarks
-    LLVMMC
-    MLIRIR
-    MLIRCAPIDebug
-    LLVMBitstreamReader
-    LLVMOrcShared
-    LLVMDebugInfoCodeView
-    LLVMDebugInfoMSF
-    LLVMBinaryFormat
-    MLIRSupport
-    LLVMSupport
-    LLVMDemangle
-    z
-    stdc++
+    MLIR-C
 
 test-suite spec
   import: defaults
